<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
   <LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:layout_marginTop="10dip">
   	    <TextView 
   	        android:layout_width="40dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:visibility="gone"
   	        android:textColor="#000000"
   	        android:text="@string/xh"/>
   	    <TextView 
   	        android:layout_width="80dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/rq"/>
   	    <TextView 
   	        android:layout_width="0dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:layout_weight="1"
   	        android:text="@string/djbh"/>
   	    <TextView 
   	        android:layout_width="0dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:layout_weight="1"
   	        android:textColor="#000000"
   	        android:text="@string/je"/>
   	    <TextView 
   	        android:layout_width="50dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:visibility="gone"
   	        android:textColor="#000000"
   	        android:text="@string/lxr"/>
   	     <TextView 
   	        android:layout_width="40dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/zt"/>
   	</LinearLayout>
   	<com.cr.common.XListView 
   	    android:id="@+id/cjjl_listview"
   	    android:layout_width="fill_parent"
   	    android:layout_height="fill_parent"
   	    android:divider="#808080"
	    android:dividerHeight="0dip">
   	</com.cr.common.XListView>
</LinearLayout>
