<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
   	<LinearLayout 
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="10dip"
   	    android:orientation="horizontal">
   	    <TextView 
   	        android:layout_width="30dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:visibility="gone"
   	        android:textColor="#000000"
   	        android:text="@string/xh"/>
   	    <TextView 
   	        android:layout_width="60dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/xmmc"/>
   	    <TextView 
   	        android:layout_width="60dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/xmjd"/>
   	    <TextView 
   	        android:layout_width="0dip"
   	        android:layout_height="wrap_content"
   	        android:layout_weight="1"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/bfnr"/>
   	    <TextView 
   	        android:layout_width="90dip"
   	        android:layout_height="wrap_content"
   	        android:gravity="center"
   	        android:textColor="#000000"
   	        android:text="@string/bfrq"/>
   	</LinearLayout>
   	<com.cr.common.XListView 
   	    android:id="@+id/zj_listview"
   	    android:layout_width="fill_parent"
   	    android:layout_height="fill_parent"
   	    android:divider="#808080"
	    android:dividerHeight="0dip">
   	</com.cr.common.XListView>
</LinearLayout>
